--- a/css/main.css
+++ b/css/main.css
@@ -284,7 +284,7 @@ a {
 }
 .skills .lang-container .lang {
   height: 20px;
-  background-color: #bbb;
+  background-color: #000;
   border-radius: 8px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
