--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,7 @@ a {
     display: none;
   }
   .header .container:hover ul{
+    display: flex; 
     flex-direction: column;
     text-align: center;
   }
