--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #eee;
 }
+.container {
+  width: 97vw; 
+margin: auto; 
+
+} 
 ul {
   list-style-type: none;
 }
@@ -226,9 +231,14 @@ a {
 .skills p {
   margin-bottom: 30px;
 }
+.skills .container {
+  display: flex; 
+  justify-contaent:space-between; 
+  flex-warp: wrap; 
+} 
 .skills .lang-container {
   margin: 0 auto 40px;
-  width: 75%;
+  flex-basis: 45%; 
 }
 .skills .lang-container:last-child {
   margin: 0 auto;
