--- a/css/main.css
+++ b/css/main.css
@@ -17,17 +17,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #eee;
 }
-.container {
-  width: 97vw; 
-margin: auto; 
-
-} 
 ul {
   list-style-type: none;
 }
 a {
   text-decoration: none;
   color: #fff;
+}
+.container {
+  width: 97vw;
+  margin: auto;
 }
 .section-title,
 .section-content {
@@ -37,6 +36,8 @@ a {
   color: #555;
 }
 .section-title {
+  animation: sec-title 1s infinite linear;
+  -webkit-animation: sec-title 1s infinite linear;
   padding: var(--section-padding) 0;
   position: relative;
   margin: 0 auto;
@@ -49,31 +50,28 @@ a {
   width: 180px;
   bottom: 60px;
   left: 50%;
+  background-color: var(--main-color);
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
-  animation: sec-ti-before 400ms infinite;
-  -webkit-animation: sec-ti-before 400ms infinite;
+  animation: sec-ti-before 1s infinite;
+  -webkit-animation: sec-ti-before 1s infinite;
+}
+.section-content {
+  animation: sec-content 1s infinite linear;
+  -webkit-animation: sec-content 1s infinite linear;
 }
 @keyframes sec-ti-before {
   0%,
   100% {
-    background-image: linear-gradient(
-      270deg,
-      var(--main-color),
-      var(--m-color-l-opacity)
-    );
+    width: 0%;
   }
   50% {
-    background-image: linear-gradient(
-      270deg,
-      var(--m-color-l-opacity), 
-      var(--main-color)
-    );
+    width: 150px;
   }
-  }
+}
 .header {
   position: sticky;
   top: 0;
@@ -166,18 +164,18 @@ a {
     display: none;
   }
   .header ul li {
-    margin-bottom: 20px; 
-    } 
-  .header .container:hover ul{
-    display: flex; 
-    flex-direction: column;
-    text-align: center;
+    margin-bottom: 20px;
   }
   .nav-bar ul li a.active::before {
-    display: none; 
+    display: none;
   }
   .nav-bar ul li::before {
     bottom: -10px;
+  }
+  .header .container:hover ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
   }
 }
 .home .container {
@@ -241,7 +239,7 @@ a {
 }
 .skills .lang-container .lang {
   height: 20px;
-  background-color: #bbb;
+  background-color: #222;
   border-radius: 8px;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -264,7 +262,7 @@ a {
   content: attr(data-progress);
   background-color: var(--main-green);
   color: #fff;
-  top: -40px;
+  top: -33px;
   right: -28px;
   padding: 4px 0;
   width: 60px;
@@ -288,6 +286,7 @@ a {
   .skills .lang-container {
     width: 90%;
   }
+}
 .portfolio a {
   color: inherit;
 }
