--- a/css/main.css
+++ b/css/main.css
@@ -47,10 +47,14 @@ a {
   position: absolute;
   content: "";
   height: 5px;
-  width: 180px;
   bottom: 60px;
   left: 50%;
-  background-color: var(--main-color);
+  background-image: linear-gradient(
+    90deg,
+    var(--m-color-l-opacity),
+    var(--main-color),
+    var(--m-color-l-opacity)
+  );
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
@@ -69,7 +73,7 @@ a {
     width: 0%;
   }
   50% {
-    width: 150px;
+    width: 180px;
   }
 }
 .header {
